# gargantua

./: .env  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  deploy-production.yml
deployments/docker/: Dockerfile
resources/config/: config.kdl
resources/static/: not_found.html  test.html
src/: env.rs  fallback.rs  health.rs  lib.rs  log_request.rs  main.rs  request_id.rs  version.rs
