[package]
name = "gargantua"
version = "0.3.0"
authors = ["Bryant Luk <bryant.luk@bryantluk.com>"]
edition = "2021"
publish = false

[dependencies]
dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = "0.3"

serde = "1"
serde_derive = "1"
serde_json = "1"

uuid = { version = "1.1.0", features = ["serde", "v4"] }

httpdate = "1.0.2"

axum = "0.6"
hyper = { version = "0.14", features = ["server", "http2", "http1"] }
http = { version = "0.2" }
tokio = { version = "1.17", features = ["signal", "macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["request-id", "trace", "util"] }
