[package]
name = "gargantua"
version = "0.5.0"
authors = ["Bryant Luk <bryant.luk@bryantluk.com>"]
edition = "2021"
publish = false
rust-version = "1.65.0"

[dependencies]
axum = "0.6"
dotenvy = "0.15.7"
http = { version = "0.2" }
httpdate = "1.0.2"
hyper = { version = "0.14", features = ["server", "http2", "http1"] }
kdl = "4.6.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1.23.1", features = ["signal", "macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "request-id", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
